--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8"/>
-  <title>FinWa</title>
-  <base href="/"/>
-  <meta content="width=device-width, initial-scale=1" name="viewport"/>
-  <link href="favicon.ico" rel="icon" type="image/x-icon"/>
-  <link href="https://fonts.gstatic.com" rel="preconnect"/>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet"/>
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
-</head>
-<body class="mat-typography dark-theme">
-<finwa-root></finwa-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>FinWa</title>
+    <base href="/" />
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <link href="favicon.ico" rel="icon" type="image/x-icon" />
+    <link href="https://fonts.gstatic.com" rel="preconnect" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  </head>
+  <body class="mat-typography dark-theme mat-app-background">
+    <finwa-root></finwa-root>
+  </body>
 </html>
