--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -6,11 +6,11 @@
     <base href="/" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link href="favicon.ico" rel="icon" type="image/x-icon" />
-    <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin />
+    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <link rel="manifest" href="manifest.webmanifest" />
-    <meta name="theme-color" content="#007AFF" />
+    <link href="manifest.webmanifest" rel="manifest" />
+    <meta content="#007AFF" name="theme-color" />
   </head>
   <body class="mat-typography dark-theme mat-app-background">
     <finwa-root></finwa-root>
